--- a/src/sdg/scss/base/_typography.scss
+++ b/src/sdg/scss/base/_typography.scss
@@ -49,9 +49,8 @@ a {
   &:active {
     @include active-link();
   }
-  /* DEPRECATED: use <qc-external-link> instead.
-    to assure non breaking space inter last word and icon
-  */
+   //DEPRECATED: use <qc-external-link> instead.
+   // to assure non breaking space inter last word and icon
   .qc-external-link-tail {
     white-space: nowrap;
     img {
