--- a/src/sdg/scss/modules/_utils.scss
+++ b/src/sdg/scss/modules/_utils.scss
@@ -2,6 +2,7 @@
 @use "tokens" as *;
 @forward "settings/settings";
 @forward "functions/utils";
+//@forward "modules/grid";
 
 // typography
 
@@ -77,15 +78,14 @@
 }
 
 
-/**
-Le champ recherche (et la barre de recherche) sont composés d'un champ et d'un ou plusieurs boutons,
-le tout dans un cadre qui affiche deux bordures de 2px à l'extérieur et à l'intérieur au focus sur le champ recherche.
-Pour afficher ces bordures, on ajoute au cadre un pseudo-élément ::before, positionné de façon absolue,
-qui affiche la bordure de 1px et l'outline interne de 2px.
-Les boutons placés dans ce cadre on le même comportement (donc héritent de cette classe).
-Tous les élémmens placés dans ce cadre son marqués comme transparents.
-De cette façon, l'affichage des focus et des bordures ne joue pas sur les marges et largeur des composants.
- */
+
+//Le champ recherche (et la barre de recherche) sont composés d'un champ et d'un ou plusieurs boutons,
+//le tout dans un cadre qui affiche deux bordures de 2px à l'extérieur et à l'intérieur au focus sur le champ recherche.
+//Pour afficher ces bordures, on ajoute au cadre un pseudo-élément ::before, positionné de façon absolue,
+//qui affiche la bordure de 1px et l'outline interne de 2px.
+//Les boutons placés dans ce cadre on le même comportement (donc héritent de cette classe).
+//Tous les élémmens placés dans ce cadre son marqués comme transparents.
+//De cette façon, l'affichage des focus et des bordures ne joue pas sur les marges et largeur des composants.
 @mixin qc-formcontrol-box() {
   position: relative;
   z-index: 10;
