--- a/src/sdg/scss/settings/_settings.scss
+++ b/src/sdg/scss/settings/_settings.scss
@@ -11,11 +11,11 @@ $google-fonts : (
 
 $enable-grid-classes: true;
 
-/*
-  TODO 1 -générer automatiquement cette map à partir du contenu du fichie img en javascript (avec gupl ou autre)
-  TODO 2 - demander des nouvelles icône les plus neutres possibles
-  TODO 3 - faire le ménage ; certaines icones sont présentées en 2 couleaurs, ce qui est inutile depuis l'introduction de qc-icon
- */
+
+  //TODO 1 -générer automatiquement cette map à partir du contenu du fichie img en javascript (avec gupl ou autre)
+  //TODO 2 - demander des nouvelles icône les plus neutres possibles
+  //TODO 3 - faire le ménage ; certaines icones sont présentées en 2 couleaurs, ce qui est inutile depuis l'introduction de qc-icon
+
 
 
 $images: (
