PivHeader - retour arrière pour sortir le code scss du composant et l'inclure dans la feuille de style. En effet, le code scss ajouté dans le composant directement en peut pas être personnalisé par modification des réglages (_settings.scss) dans un projet qui ajouterait la trousse comme dépendance.

--- a/public/css/qc-sdg-design-tokens.css
+++ b/public/css/qc-sdg-design-tokens.css
@@ -52,6 +52,7 @@
   --qc-color-blue-light: #4a98d9;
   --qc-color-blue-regular_light: #2586d6;
   --qc-color-blue-regular: #1472bf;
+  --qc-color-blue-piv_rgb: 9, 87, 151;
   --qc-color-blue-piv: #095797;
   --qc-color-blue-medium: #19406C;
   --qc-color-blue-dark_rgb: 34, 54, 84;
