--- a/src/sdg/scss/settings/_tokens.scss
+++ b/src/sdg/scss/settings/_tokens.scss
@@ -73,6 +73,7 @@ $lg-tokens: (
               light : #4a98d9,
               regular_light: #2586d6,
               regular : #1472bf,
+              piv_rgb: (9, 87, 151),
               piv: #095797,
               medium : #19406C,
               dark_rgb: (34, 54, 84),
