Importante refonte de la structure du code. Création d'un unique fichier d'inclusion pour pour utiliser les réglages + lib du sdg.

--- a/src/doc/scss/components/_button.scss
+++ b/src/doc/scss/components/_button.scss
@@ -1,7 +1,4 @@
-@use "settings/settings" as *;
-@use "functions/utils" as *;
-@use "modules/tokens" as *;
-@use "modules/utils" as *;
+@use "qc-sdg-lib" as *;
 @use "base/shadings" as *;
 
 @mixin button-border-and-padding($border-size, $padding-y, $padding-x) {
