--- a/src/sdg/scss/qc-sgd-no-grid.scss
+++ b/src/sdg/scss/qc-sgd-no-grid.scss
@@ -11,7 +11,7 @@
 @use "utilities/display" as *;
 @use "./components/icons" as *;
 @use "./components/notice" as *;
-@use "components/piv-header/pivHeader" as *;
+@use "components/pivHeader" as *;
 @use "./components/pivFooter" as *;
 @use "./components/alert" as *;
 @use "./components/toTop" as *;
