--- a/src/sdg/scss/settings/_tokens.scss
+++ b/src/sdg/scss/settings/_tokens.scss
@@ -1,6 +1,6 @@
-@use "settings/settings" as *;
-@use "functions/utils" as *;
-@use "functions/tokens" as *;
+@use "base" as *;
+@use "lib/functions" as *;
+
 // TODO remplacer les clés avec tirets par un souligné foo-bar -> foo_bar
 // TODO générer ce fichier à partir d'un json, afin d'avoir les tokens en js
 $lg-tokens: (
