--- a/src/sdg/scss/utilities/_display.scss
+++ b/src/sdg/scss/utilities/_display.scss
@@ -1,4 +1,5 @@
-@import "settings/grid";
+@use "../base/grid/settings" as *;
+@use "../base/grid/functions" as *;
 @import "vendor/bootstrap-rewrite/utilities/display";
 //@import "vendor/bootstrap-rewrite/mixins/deprecate";
 
