--- a/src/doc/scss/qc-doc-sdg.scss
+++ b/src/doc/scss/qc-doc-sdg.scss
@@ -1,8 +1,4 @@
-@use "settings/settings" as *;
-@use "functions/utils" as *;
-@use "modules/tokens" as *;
-@use "modules/utils" as *;
-@use "modules/grid" as *;
+@use "qc-sdg-lib" as *;
 @use "components/icons" as *;
 @use "components/code" as *;
 @use "components/button" as *;
