--- a/src/sdg/scss/base/_colors.scss
+++ b/src/sdg/scss/base/_colors.scss
@@ -1,8 +1,5 @@
-@use "modules/utils" as *;
-@use "modules/tokens" as *;
-@use "modules/map" as *;
+@use "qc-sdg-lib" as *;
 @use "sass:map";
-@use "sass:list";
 
 @mixin generate-color-classes($colors) {
   @include map-deep-parse($colors) using ($path,$value)
