--- a/src/sdg/scss/base/_grid.scss
+++ b/src/sdg/scss/base/_grid.scss
@@ -1,4 +1,5 @@
-@use "modules/grid" as *;
+@use "grid/settings" as *;
+@use "grid/functions" as *;
 @import "vendor/bootstrap-rewrite/grid";
 
 // Décommenter ces lignes pour ajouter les classes utilitaires bootstrap précédées de « qc- »,
