--- a/src/sdg/scss/base/_shadings.scss
+++ b/src/sdg/scss/base/_shadings.scss
@@ -1,6 +1,4 @@
-@use "../modules/tokens" as *;
-@use "../modules/utils" as *;
-@use "../modules/map" as *;
+@use "qc-sdg-lib" as *;
 @use "sass:map";
 
 @each $index,$settings in map.get($lg-tokens, box_shadow) {
