--- a/src/sdg/scss/base/_typography.scss
+++ b/src/sdg/scss/base/_typography.scss
@@ -1,5 +1,4 @@
-@use "modules/tokens" as *;
-@use "modules/utils" as *;
+@use "qc-sdg-lib" as *;
 
 @for $i from 1 through 6 {
   h#{$i}, .qc-h#{$i} {
