--- a/src/sdg/scss/components/_icons.scss
+++ b/src/sdg/scss/components/_icons.scss
@@ -1,6 +1,4 @@
-@use "modules/tokens" as *;
-@use "modules/utils" as *;
-@use "modules/grid" as *;
+@use "qc-sdg-lib" as *;
 
 qc-icon {
   display: inline-flex;
