--- a/src/sdg/scss/components/_pivHeader.scss
+++ b/src/sdg/scss/components/_pivHeader.scss
@@ -1,6 +1,4 @@
-@use "modules/tokens" as *;
-@use "modules/utils" as *;
-@use "modules/grid" as *;
+@use "qc-sdg-lib" as *;
 
 $colors : map-get($themes-tokens, light, lg, color);
 
