--- a/src/sdg/scss/components/_searchBar.scss
+++ b/src/sdg/scss/components/_searchBar.scss
@@ -1,6 +1,4 @@
-@use "modules/tokens" as *;
-@use "modules/utils" as *;
-@use "modules/grid" as *;
+@use "qc-sdg-lib" as *;
 @use "searchInput" as *;
 
 qc-search-bar {
