--- a/src/sdg/scss/qc-design-tokens.scss
+++ b/src/sdg/scss/qc-design-tokens.scss
@@ -1,7 +1,4 @@
-@use "modules/tokens" as *;
-@use "modules/map" as *;
-@use "modules/grid" as *;
-@use "modules/utils" as *;
+@use "qc-sdg-lib" as *;
 
 @mixin generate-token-for-breakpoints($breakpoints-settings) {
 
