--- a/src/sdg/scss/_qc-sdg-lib.scss
+++ b/src/sdg/scss/_qc-sdg-lib.scss
@@ -1,3 +1,4 @@
+// @use this file to access every variables, function, mixin or %class from Qc SDG
 @forward "settings/base";
 @forward "settings/tokens";
 @forward "lib/functions";
