Override des fonction bootstrap de grille, (media-breakpoint-up/down/between) pour leur permettre de fonctionner avec des aliases : mobile, tablet, desktop, large-desktop

--- a/src/sdg/scss/base/grid/_functions.scss
+++ b/src/sdg/scss/base/grid/_functions.scss
@@ -1,4 +1,5 @@
 @use "settings" as *;
+@forward "settings";
 @import "../../vendor/bootstrap-rewrite/mixins/breakpoints";
 @import "../../vendor/bootstrap-rewrite/mixins/deprecate";
 @import "../../vendor/bootstrap-rewrite/mixins/grid";
