Ajout des tokens extra-pale pour le gris et le bleu

--- a/public/css/qc-sdg-design-tokens.css
+++ b/public/css/qc-sdg-design-tokens.css
@@ -49,6 +49,7 @@
   --qc-max-content-width: 82.5rem;
   --qc-color-white: #ffffff;
   --qc-color-white-rgb: 255, 255, 255;
+  --qc-color-blue-extra-pale: var(--qc-color-blue-pale);
   --qc-color-blue-pale: #dae6f0;
   --qc-color-blue-pale-rgb: 218, 230, 240;
   --qc-color-blue-light: #4a98d9;
@@ -65,6 +66,7 @@
   --qc-color-blue-dark-rgb: 34, 54, 84;
   --qc-color-purple: #6b4fa1;
   --qc-color-purple-rgb: 107, 79, 161;
+  --qc-color-grey-extra-pale: var(--qc-color-grey-pale);
   --qc-color-grey-pale: #f1f1f2;
   --qc-color-grey-pale-rgb: 241, 241, 242;
   --qc-color-grey-light: #c5cad2;
