Réécriture de qc-sdg-lib

--- a/src/sdg/scss/_qc-sdg-lib.scss
+++ b/src/sdg/scss/_qc-sdg-lib.scss
@@ -1,5 +1,6 @@
 // @use this file to access every variables, function, mixin or %class from Qc SDG
-@forward "settings/base";
-@forward "settings/tokens";
+//@forward "settings/base";
+//@forward "settings/tokens";
+@forward "settings/all";
 @forward "lib/functions";
 @forward "lib/mixins";
