Correction de chemin d'inclusion en relatif. Les chemins doivent toujours être absolus, afin de pouvoir les écraser par définition des chemins d'inclusion (includePath) au niveau du compilateur sass

--- a/src/sdg/scss/utilities/_display.scss
+++ b/src/sdg/scss/utilities/_display.scss
@@ -1,5 +1,5 @@
-@use "../base/grid/settings" as *;
-@use "../base/grid/functions" as *;
+@use "base/grid/settings" as *;
+@use "base/grid/functions" as *;
 @import "vendor/bootstrap-rewrite/utilities/display";
 //@import "vendor/bootstrap-rewrite/mixins/deprecate";
 
