--- a/src/sdg/scss/components/_alert.scss
+++ b/src/sdg/scss/components/_alert.scss
@@ -1,7 +1,7 @@
 @use "qc-sdg-lib" as *;
 
 .qc-general-alert {
-  padding: token-value(spacer, md) token-value(spacer, sm);
+  padding: token-value(spacer, md) 0;
 
   @include media-mobile() {
     padding: token-value(spacer, sm);
